# photon

./: CMakeLists.txt  CMakePresets.json
photon/: CMakeLists.txt  photon.cpp  photon.h
src/: main.cpp
src/app/: AppState.h  Application.cpp  Application.h  CMakeLists.txt  Configurations.h  Rendering.h  app.cpp  app.h
src/raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Hittable.h  HittableList.h  Interval.h  Ray.h  Raytracer.h  Sphere.h  color.h  math_utils.h  raytracer.cpp  vec3.h
src/raytracer/Materials/: AllMaterials.h  Dielectric.h  Lambertian.h  Material.h  Metal.h
